[package]
name = "backend"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# make = { path = "./make" }
make = { git = "https://github.com/ivanschuetz/make", branch = "main" }
# make = { git = "ssh://git@github.com/ivanschuetz/make.git", branch = "main" }
# algonaut = { path = "/Users/ischuetz/dev/github/algonaut" }
algonaut = { git = "https://github.com/manuelmauro/algonaut", branch = "main", features = ["rustls"], default-features = false }
# logger = { path = "./logger" }
logger = { git = "https://github.com/ivanschuetz/logger", branch = "main" }
# logger = { git = "ssh://git@github.com/ivanschuetz/logger.git", branch = "main" }
anyhow = "1.0"
serde = {version = "1.0", features = ["derive"]}
warp = "0.3"
log = "0.4"
tokio = { version = "1.2.0", features = ["full"] }
tokio-postgres = { version = "0.7.2", features = ["with-chrono-0_4"] }
async-trait = "0.1.51"
data-encoding = "2.3.2"
serde_json = "1.0.64"
chrono = "0.4.19"
dotenv = "0.10.0"
